--- a/style.css
+++ b/style.css
@@ -86,47 +86,49 @@ body {
         /* Animazioni per i blob */
         @keyframes moveBlob1 {
             0% { transform: translate(0, 0) scale(1); }
-            50% { transform: translate(10vw, -20vh) scale(1.2); } /* vh = viewport height */
+            /* Raggiunge il picco più rapidamente (al 40% invece del 50%) */
+            40% { transform: translate(10vw, -20vh) scale(1.2); }
             100% { transform: translate(-5vw, 15vh) scale(0.9); }
         }
 
         @keyframes moveBlob2 {
             0% { transform: translate(0, 0) scale(1.1); }
-            50% { transform: translate(-15vw, 10vh) scale(0.8); }
+            40% { transform: translate(-15vw, 10vh) scale(0.8); }
             100% { transform: translate(5vw, -10vh) scale(1.1); }
         }
 
         @keyframes moveBlob3 {
             0% { transform: translate(0, 0) scale(0.9); }
-            50% { transform: translate(5vw, 15vh) scale(1.3); }
+            40% { transform: translate(5vw, 15vh) scale(1.3); }
             100% { transform: translate(-10vw, -5vh) scale(1); }
         }
   
 
 
-  
+.titoloeicona{
+    display: flex;
+
+}
+
   
  
 
 
 .titolo {
+    flex-wrap: nowrap;
     position: absolute;
-    top: 0%;
+    align-items: center;
     width: 100%;
     display: flex;
     opacity: 1;
     color: white;
-    font-size: 120px;
+    font-size: 180px;
     font-family: 'font_titolo', sans-serif;
 }
-.icona, .icona-cervello {
-    top: 50%;
-    position: absolute;
-    right: 22%;
+
+.icona{
     fill: white;
-}
-.icona-cervello {
-    opacity: 0;
+    height:max-content
 }
 .container {
     
@@ -135,54 +137,22 @@ body {
     width: 100vw;
 }
 
-.sito{
-    position: absolute;
-    top: 400px;
-    height: 100vh;
-    
+#freccia {
+position: absolute;
+
+top: 1750px;
+left: 30%;
+opacity: 1;
+ 
+}
+#curvedPath{
+position: absolute;
+fill: black;
+opacity: 1;
+
+}
+.facile{
+    z-index: 10;
 }
 
     
-@keyframes radialGradientAnimation {
-    0% {
-        --x1: 0%; --y1: 0%;   --c1: #6A0DAD; /* Viola */
-        --x2: 100%; --y2: 100%; --c2: #FF1493; /* Rosa */
-        --x3: 50%; --y3: 0%;   --c3: #1E90FF; /* Blu */
-        --x4: 0%; --y4: 100%; --c4: #00CED1; /* Turchese */
-        /* Opzionale: animare anche la posizione generale del background */
-        /* background-position: 0% 50%; */
-    }
-    20% {
-        --x1: 20%; --y1: 80%; --c1: #FFA500; /* Arancione */
-        --x2: 50%; --y2: 20%; --c2: #6A0DAD;
-        --x3: 80%; --y3: 50%; --c3: #FF1493;
-        --x4: 30%; --y4: 10%; --c4: #1E90FF;
-    }
-    40% {
-        --x1: 80%; --y1: 30%; --c1: #00CED1; /* Turchese */
-        --x2: 10%; --y2: 70%; --c2: #FFA500;
-        --x3: 20%; --y3: 80%; --c3: #6A0DAD;
-        --x4: 70%; --y4: 40%; --c4: #FF1493;
-        /* background-position: 50% 50%; */
-    }
-    60% {
-        --x1: 50%; --y1: 10%; --c1: #FF1493; /* Rosa */
-        --x2: 90%; --y2: 40%; --c2: #00CED1;
-        --x3: 10%; --y3: 90%; --c3: #FFA500;
-        --x4: 50%; --y4: 60%; --c4: #6A0DAD;
-    }
-     80% {
-        --x1: 10%; --y1: 60%; --c1: #1E90FF; /* Blu */
-        --x2: 60%; --y2: 10%; --c2: #FF1493;
-        --x3: 90%; --y3: 70%; --c3: #00CED1;
-        --x4: 20%; --y4: 20%; --c4: #FFA500;
-        /* background-position: 100% 50%; */
-    }
-    100% {
-        --x1: 0%; --y1: 0%;   --c1: #6A0DAD;
-        --x2: 100%; --y2: 100%; --c2: #FF1493;
-        --x3: 50%; --y3: 0%;   --c3: #1E90FF;
-        --x4: 0%; --y4: 100%; --c4: #00CED1;
-        /* background-position: 0% 50%; */
-    }
-}
