--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ body {
             height: 30vw;
             top: 60%;
             left: 10%;
-            animation: moveBlob1 20s infinite alternate ease-in-out;
+            animation: moveBlob1 12s infinite alternate ease-in-out;
         }
 
         .blob.color-magenta {
@@ -69,7 +69,7 @@ body {
             height: 40vw;
             top: 10%;
             left: 40%;
-            animation: moveBlob2 25s infinite alternate ease-in-out;
+            animation: moveBlob2 12s infinite alternate ease-in-out;
             animation-delay: -5s; /* Sfasamento dell'animazione */
         }
 
@@ -77,9 +77,18 @@ body {
             background-color: #ff6a00;
             width: 35vw;
             height: 35vw;
+            top: 20%;
+            left: 0%;
+            animation: moveBlob3 12s infinite alternate ease-in-out;
+            animation-delay: -10s; /* Altro sfasamento */
+        }
+        .blob.color-green {
+            background-color: #134207;
+            width: 35vw;
+            height: 35vw;
             top: 30%;
             left: 70%;
-            animation: moveBlob3 18s infinite alternate ease-in-out;
+            animation: moveBlob4 12s infinite alternate ease-in-out;
             animation-delay: -10s; /* Altro sfasamento */
         }
 
@@ -102,6 +111,12 @@ body {
             40% { transform: translate(5vw, 15vh) scale(1.3); }
             100% { transform: translate(-10vw, -5vh) scale(1); }
         }
+        @keyframes moveBlob4 {
+            0% { transform: translate(0, 0) scale(1); }
+            /* Raggiunge il picco più rapidamente (al 40% invece del 50%) */
+            40% { transform: translate(10vw, -20vh) scale(1.2); }
+            100% { transform: translate(-5vw, 15vh) scale(0.9); }
+        }
   
 
 
@@ -115,7 +130,32 @@ body {
     top: 20%;
 }
  
+.opzioni{
+    position: absolute;
+    top: 2100px;
+    display: flex;
+    justify-content:space-around;
+    height:fit-content;
+    width: 100vw;
+}
 
+
+.nuovo, .continua{
+    opacity: 0;
+    align-items: center;
+    text-align: center;
+    margin: 20px;
+    padding: 20px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    font-size: 25px;
+    background-color: rgba(0, 0, 0, 0.253);
+    color: white;
+    height: 200px;
+    width: 300px;
+    font-family: 'font_titolo', sans-serif;
+}
 
 .titolo {
     flex-wrap: nowrap;
