--- a/nuovo/nuovo.css
+++ b/nuovo/nuovo.css
@@ -48,7 +48,7 @@ body {
     
 }
 .carica{
-    background-color: rgba(45, 70, 73, 0.868);
+    background-color: rgba(28, 45, 47, 0.73);
 }
 .opzioni{
     background-color: rgba(30, 38, 46, 0.868);
@@ -58,27 +58,52 @@ body {
 }
 .carica,.opzioni,.attendi{
     height: 95vh;
-    width: 95vw;
+    width: 98vw;
     position: absolute;
+    
     top: 2.5%;
-    left: 2.5%;
+    left: 1%;
     
     border-radius: 10px;
-    
+    border-style: solid;
+    border-color: white;
 }
-.opzioni,.attendi{
+.opzioni, .attendi {
     opacity: 0;
+    scale: 0.5;
+    transform: translateX(-200%);
 }
 
 .descrizione-carica{
+    margin-top: 6%;
+    opacity: 0;
+    scale: 0.5;
+    z-index: 3;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     font-size: larger;
-    padding: 2vh;
+    padding: 8vh;
+    border-style: solid;
     color: rgb(255, 255, 255);
     border-radius: 10px;
-    height: 75vh;
+    border-color: rgb(255, 255, 255);
+    height: 70vh;
     width: 30vw;
     background-color: rgba(0, 0, 0, 0.616);
+}
+
+.carica-file{
+    margin-top: 3%;
+    scale: 0.5;
+    height: 70vh;
+    width: 99%;
+    background-color: rgba(0, 0, 0, 0.616);
+    border-radius: 6px;
+    margin-right: 5%;
+    opacity: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-style: dashed;
 }
