--- a/nuovo/nuovo.css
+++ b/nuovo/nuovo.css
@@ -21,139 +21,19 @@ html {
 html::-webkit-scrollbar {
     display: none;
 }
-html, body {
-    height: 100%; /* FONDAMENTALE */
-    font-family: "font_titolo" /* Font di default */
-}
-body {
-    
+
+body{
     background-color: black;
-    color: white; /* Colore del testo di default, se non sovrascritto */
-   
-    
-  }
-
-    
-.titolo-carica,.titolo-opzioni{
-    display: flex;
-    justify-content: center;
-    margin-top: 4vh;
 }
-.icona-carica{
-    height: 8vh;
-    width: 8vw;
-    stroke: white;
-    
-    
-    
-}
-.carica{
-    background-color: rgba(28, 45, 47, 0.73);
-}
-.opzioni{
-    background-color: rgba(30, 38, 46, 0.868);
-}
-.attendi{
-    background-color: rgba(35, 34, 58, 0.868);
-}
-.carica,.opzioni,.attendi{
-    height: 95vh;
+.titolo{
+    font-family:"font_titolo";
+    font-size: 80px;
+    color: white;
+    opacity: 0;
+    scale: 0;
+    height: 100vh;
     width: 98vw;
-    position: absolute;
-    
-    top: 2.5%;
-    left: 1%;
-    
-    border-radius: 10px;
-    border-style: solid;
-    border-color: white;
-}
-.opzioni, .attendi {
-    opacity: 0;
-    scale: 0.5;
-    transform: translateX(-200%);
-}
-
-.descrizione-carica{
-    margin-top: 6%;
-    opacity: 0;
-    scale: 0.5;
-    z-index: 3;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    font-size: larger;
-    padding: 8vh;
-    border-style: solid;
-    color: rgb(255, 255, 255);
-    border-radius: 10px;
-    border-color: rgb(255, 255, 255);
-    height: 70vh;
-    width: 30vw;
-    background-color: rgba(0, 0, 0, 0.616);
-}
-
-.carica-file,.def-opzioni{
-    margin-top: 3%;
-    scale: 0.5;
-    height: 70vh;
-    width: 99%;
-    background-color: rgba(0, 0, 0, 0.616);
-    border-radius: 6px;
-    margin-right: 5%;
-    opacity: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-style: dashed;
 }
-
-.descrizione-opzioni{
-    margin-top: 6%;
-    opacity: 0;
-    scale: 0.5;
-    z-index: 3;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    font-size: larger;
-    padding: 8vh;
-    border-style: solid;
-    color: rgb(255, 255, 255);
-    border-radius: 10px;
-    border-color: rgb(255, 255, 255);
-    height: 70vh;
-    width: 30vw;
-    background-color: rgba(0, 0, 0, 0.616);
-
-}
-.titolo-opzioni{
-    font-size: 60px;
-    
-}
-
-
-.descrizione-opzioni{
-    margin-top: 6%;
-    opacity: 0;
-    scale: 0.5;
-    z-index: 3;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    font-size: larger;
-    padding: 8vh;
-    border-style: solid;
-    color: rgb(255, 255, 255);
-    border-radius: 10px;
-    border-color: rgb(255, 255, 255);
-    height: 70vh;
-    width: 30vw;
-    background-color: rgba(0, 0, 0, 0.616);
-
-}
-.titolo-opzioni{
-    font-size: 60px;
-    
-}
-
